--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,24 @@
     background-color: orange;
 }
 
+.subtext {
+    font-style: italic;
+}
+
 .hand {
-    width: 20rem;
+    max-width: 20rem;
     height: auto;
+}
+
+.navbar-brand {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.steps {
+    font-weight: 500;
+}
+
+.footer {
+    color: white;
 }
